IngressAndRestrictionPod/RestrictPod/RestrictPolicy6/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: prod
