IngressAndRestrictionPod/RestrictPod/RestrictPolicy6/PodDef.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  labels: 
    app: my-app
spec:
  containers:
  - name: pod
    image: nginx
    ports:
    - containerPort: 80
