IngressAndRestrictionPod/RestrictPod/RestrictPolicy6/PodProd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: prod
spec:
  containers:
  - name: pod1
    image: nginx
    ports:
    - containerPort: 80
