IngressAndRestrictionPod/RestrictPod/RestrictPolicy6/podLabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels: 
    role: frontend
spec:
  containers:
  - name: pod1
    image: nginx
    ports:
    - containerPort: 80
